
# v*
- Fix mw.apply vectorization
- Fix mw.regression data name
- Provide indices on as.ibts conversion error

# v1.3-6
- Fix dropping class
- Fix github release workflow

# v1.3-5
- Fix c.POSIXct and add c.POSIXlt

# v1.3-4
- several fixes
- fix %+% & %-% always providing a time range

# v1.3-3
- improve pooling of data.table
- move times to "front" in ibts <-> data.table/frame conversion

# v1.3-2
- fix pooling to lower granularity (finally)
- fix SE pooling functions

# v1.3-1
- fix pooling to lower granularity without providing st.to/et.to
- fix subsetting by empty range, e.g. ' to '

# v1.3-0
- allow self referencing using '.' inside i => e.g. my_ibts[.$my_col > 0, ]
- allow dropping the date in subsetting, if time range is within the same day
- add min.coverage argument to `pool` function
- add experimental pool function for data.table objects
- minor fixes and and error message improvements
- move arguments to generic `as.ibts` function

# v1.2-1
- Fix miliseconds indication
